--- a/JavaCore/多态/继承.md
+++ b/JavaCore/多态/继承.md
@@ -5,4 +5,9 @@
 * 构造器中除了基类的final方法，避免调用其他方法
 * 协变返回类型：导出类的覆盖方法返回基类方法的返回类型的子类
 * 继承表达行为的差异 字段表达状态的差异
-* 向下转型 ClassCastException
+* 向下转型 运行时类型识别(RTTI) ClassCastException
+
+# 接口
+* 接口可以继承
+* 接口中的域都是static final
+* 多重继承
