--- a/J2EE/正则表达式/正则表达式.md
+++ b/J2EE/正则表达式/正则表达式.md
@@ -1,9 +1,7 @@
 # 正则表达式
-
-
-
-* + 1到n次;* 0到n次;? 0到1次
-* 
-* 通过在 *、+ 或 ? 限定符之后放置 ?，该表达式从"贪心"表达式转换为"非贪心"表达式或者最小匹配。
+### [正则表达式速查表](/正则表达式速查表.md)
+### [常用正则表达式](/常用正则表达式.md)
 
 # Java正则表达式
+* Pattern.matches(pattern, content)
+* \\ 表示一个正则表达式的反斜线，所以其后的字符具有特殊的意义。故\d的java正则为\\d
