--- a/J2EE/正则表达式/正则表达式速查表.md
+++ b/J2EE/正则表达式/正则表达式速查表.md
@@ -11,7 +11,7 @@
 |{n,}|n是一个非负整数。至少匹配n次。|“o{2,}"不能匹配"Bob"中的"o"，但能匹配"foooood"中的所有o。<br>"o{1,}"等价于"o+"。"o{0,}"则等价于"o*"。|
 |{n,m}|	m和n均为非负整数，其中n<=m。最少匹配n次且最多匹配m次。|“o{1,3}"将匹配"fooooood"中的前三个o。"o{0,1}"等价于"o?"。请注意在逗号和两个数之间不能有空格。|
 |?	|当该字符紧跟在任何一个其他限制符（*,+,?，{n}，{n,}，{n,m}）后面时，匹配模式是非贪婪的。<br>非贪婪模式尽可能少的匹配所搜索的字符串，而默认的贪婪模式则尽可能多的匹配所搜索的字符串。|对于字符串“oooo"，"o+?"将匹配单个"o"，而"o+"将匹配所有"o"。|
-|.	|匹配除“\n"之外的任何单个字符。要匹配包括"\n"在内的任何字符，请使用像"(.|\n)"的模式。|
+|.	|匹配除“\n"之外的任何单个字符。要匹配包括"\n"在内的任何字符，请使用像"(.&#124;\n)"的模式。|
 |(pattern)|	匹配pattern并获取这一匹配。所获取的匹配可以从产生的Matches集合得到，<br>在VBScript中使用SubMatches集合，在JScript中则使用$0…$9属性。<br>要匹配圆括号字符，请使用“\("或"\)"。|
 |(?:pattern)|	匹配pattern但不获取匹配结果，也就是说这是一个非获取匹配，不进行存储供以后使用。<br>这在使用或字符“(&#124;)"来组合一个模式的各个部分是很有用。|例如"industr(?:y&#124;ies)"就是一个比"industry|industries"更简略的表达式。|
 |(?=pattern)|	正向肯定预查，在任何匹配pattern的字符串开始处匹配查找字符串。<br>这是一个非获取匹配，也就是说，该匹配不需要获取供以后使用。|“Windows(?=95&#124;98&#124;NT&#124;2000)"能匹配"Windows2000"中的"Windows"，但不能匹配"Windows3.1"中的"Windows"。预查不消耗字符，也就是说，在一个匹配发生后，在最后一次匹配之后立即开始下一次匹配的搜索，而不是从包含预查的字符之后开始。|
