--- a/JavaCore/泛型/泛型.md
+++ b/JavaCore/泛型/泛型.md
@@ -1,5 +1,5 @@
 ## 泛型
-* 泛型类
+* 泛型类:类型参数，尖括号括住，放在类名后面
 ````
 public class ApiResult<T> {
 
@@ -8,10 +8,10 @@ public class ApiResult<T> {
     T             resultObject;
    
 　　  //  省略构造方法和 get,set方法。
-    
+      
 }
 ````
-* 泛型方法
+* 泛型方法:泛型参数置于返回值之前
 ````
 复制代码
 public class JsonUtil {
